--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "harmony-mono-repo",
+  "name": "@harmony/styles",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "workspaces": [
-    "packages/*",
-    "sites/*"
-  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
+  }
 }
