--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beryl",
+  "name": "shared-ui",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,10 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^4.0.0",
-    "@harmony/styles": "workspace:^",
-    "astro": "^2.10.14",
-    "shared-ui": "workspace:^",
-    "tailwindcss": "^3.3.3"
+    "astro": "^2.10.14"
   }
 }
