--- a/packages/shared-ui/header/package.json
+++ b/packages/shared-ui/header/package.json
@@ -1,8 +1,6 @@
 {
-    "private": true,
-    "name": "@harmony/shared-ui-header",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "./index.ts"
-  }
-  
+  "name": "@harmony/shared-ui-header",
+  "version": "1.0.0",
+  "description": "",
+  "main": "./index.ts"
+}
