--- a/sites/beryl/package.json
+++ b/sites/beryl/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beryl",
   "type": "module",
-  "version": "0.1.1",
+  "version": "0.0.0-20230903174834",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
